<resources>
    <string name="app_name" translatable="false">GeometryGO</string>
    <string name="am_btn_create_lobby">Create Lobby</string>
    <string name="am_btn_join_lobby">Join Lobby</string>
    <string name="am_btn_about">About</string>
    <string name="am_btn_scoreboard">Scoreboard</string>
    <string name="as_tv_top_5">Top 5</string>
    <string name="aa_about_information">Project done by:\n\t- Henrique Fonseca\n\t- José Francisco Bugalho\n\t- Marco Ferreira\n\nProject developed in the academic year 2020/2021, in regards of the course of the 3rd year of the Degree in Computer Engineering taught at the Coimbra Institute of Engineering, \"Arquiteturas Móveis\".</string>
    <string name="ad_no_internet_connection">No internet connection. Try again later!</string>
    <string name="al_tv_players">Players</string>
    <string name="al_btn_start_game">Start Game</string>
    <string name="player_tag">Player</string>
    <string name="ad_join_lobby">Join Lobby</string>
    <string name="ad_jl_insert_server_ip">Insert server ip</string>
    <string name="ad_jl_btn_cancel">Cancel</string>
    <string name="ad_jl_btn_connect">Connect</string>
    <string name="ad_jl_et_empty_error">You have to insert the server ip first!</string>
    <string name="ad_create_new_lobby">Create New Lobby</string>
    <string name="ad_insert_team_name">Insert team name</string>
    <string name="ad_cl_btn_cancel">Cancel</string>
    <string name="ad_cl_btn_create">Create</string>
    <string name="ad_cl_et_empty_error">Should insert team name first!</string>
    <string name="you_player_tag">You</string>
    <string name="ad_cl_jl_et_no_latitude_longitude_error">Check if your GPS is enabled!</string>
    <string name="ad_ql_btn_no">No</string>
    <string name="ad_ql_btn_yes">Yes</string>
    <string name="ad_ql_quit_lobby">Are you sure that you want to quit the lobby?</string>
    <string name="ad_ql_close_lobby">Are you sure that you want to close the lobby?</string>
    <string name="ad_et_more_than_25_characters_error">The name should have less than 25 characters!</string>
    <string name="ap_player_1_start_point">P1 Start Point</string>
    <string name="ap_btn_end_game_check_icon" translatable="false">✔</string>
    <string name="ad_cc_insert_number">Insert Number</string>
    <string name="ad_cc_btn_send">Send</string>
    <string name="ad_cc_btn_cancel">Cancel</string>
    <string name="sms_id_token" translatable="false">GEOAPP_Automatic_MSG_6172839405 Requested join on IP:</string>
    <string name="play_activity_player_first_letter">P</string>
    <string name="ad_cc_insert_a_valid_phone_number_error">Insert a valid phone number!</string>
    <string name="sms_response_thanks_for_the_ip">Thanks for the ip!</string>
    <string name="sms_received_text">SMS received.</string>
    <string name="aegw_tv_you_win">You win!</string>
    <string name="aeg_btn_go_menu_arrow_right" translatable="false">➜</string>
    <string name="not_enough_players_to_finish_the_game_information">Not enough players to finish the game.</string>
    <string name="time_expired_information">Time expired!</string>
    <string name="aeg_you_lose">You lose!</string>
    <string name="aeg_area_tag">Area:</string>
    <string name="aeg_average_distance_tag">Average distance:</string>
    <string name="ap_dialog_back_pressed_title">Are you sure that you want to leave the game?</string>
    <string name="ap_dialog_back_pressed_yes">Yes</string>
    <string name="ap_dialog_back_pressed_no">No</string>
    <string name="ap_dialog_create_dialog_polygon_title">Polygon to draw:</string>
    <string name="ap_dialog_create_polygon_ok">Ok</string>
    <string name="ap_polygon_triangle">Triangle</string>
    <string name="ap_polygon_square">Square</string>
    <string name="ap_polygon_pentagon">Pentagon</string>
    <string name="ap_polygon_hexagon">Hexagon</string>
    <string name="ap_polygon_heptagon">Heptagon</string>
    <string name="ap_polygon_octagon">Octagon</string>
    <string name="ap_polygon_eneagon">Eneagon</string>
    <string name="ap_polygon_decagon">Decagon</string>
    <string name="as_n_vertices">N Vetices:</string>
</resources>