<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:elevation="@dimen/ad_jl_ll_main_elevation"
    android:padding="@dimen/ad_jl_ll_main_padding">

    <!-- TextView to display the dialog title. -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad_join_lobby"
        android:textSize="@dimen/ad_jl_tv_title_text_size"
        android:textAlignment="center" />

    <!-- EditText to user write the server ip. -->
    <EditText
        android:id="@+id/etDialogIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ad_jl_insert_server_ip"
        android:inputType="textCapSentences"
        android:textSize="@dimen/ad_jl_et_text_size"
        android:maxLines="1"
        android:layout_marginTop="@dimen/ad_jl_et_margin_top"
        android:importantForAutofill="no" />

    <!-- LinearLayout to display the buttons. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ad_jl_ll_margin_top" >

        <!-- Button Cancel. -->
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/menu_buttons"
            android:text="@string/ad_jl_btn_cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/ad_jl_btn_text_size"
            android:layout_marginEnd="@dimen/ad_jl_btn_cancel_margin_end"
            android:paddingHorizontal="@dimen/ad_jl_btn_padding_horizontal"
            tools:ignore="ButtonStyle" />

        <!-- Button Connect. -->
        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/menu_buttons"
            android:text="@string/ad_jl_btn_connect"
            android:textColor="@color/black"
            android:textSize="@dimen/ad_jl_btn_text_size"
            android:layout_marginStart="@dimen/ad_jl_btn_connect_margin_start"
            android:paddingHorizontal="@dimen/ad_jl_btn_padding_horizontal"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>