<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ll_background_color"
    android:orientation="vertical"
    android:padding="@dimen/am_ll_global_padding"
    tools:context=".activities.MainActivity">

    <!-- LinearLayout for the app logo. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <!-- ImageView with the logo -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <!-- LinearLayout for the menu buttons. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- ConstraintLayout for the menu buttons. -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/am_cl_layout_margin"
            android:orientation="vertical"
            android:padding="@dimen/am_cl_padding">

            <!-- Create Lobby Button. -->
            <Button
                android:id="@+id/btnCreateLobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/am_btn_layout_margin"
                android:background="@drawable/menu_buttons"
                android:padding="@dimen/am_btn_padding"
                android:text="@string/am_btn_create_lobby"
                android:textColor="@color/black"
                android:textSize="@dimen/am_btn_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnJoinLobby"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Join Lobby Button. -->
            <Button
                android:id="@+id/btnJoinLobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/am_btn_layout_margin"
                android:background="@drawable/menu_buttons"
                android:padding="@dimen/am_btn_padding"
                android:text="@string/am_btn_join_lobby"
                android:textColor="@color/black"
                android:textSize="@dimen/am_btn_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnScoreboard"
                app:layout_constraintTop_toBottomOf="@+id/btnCreateLobby" />

            <!-- Scoreboard Button. -->
            <Button
                android:id="@+id/btnScoreboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/am_btn_layout_margin"
                android:background="@drawable/menu_buttons"
                android:padding="@dimen/am_btn_padding"
                android:text="@string/am_btn_scoreboard"
                android:textColor="@color/black"
                android:textSize="@dimen/am_btn_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnAbout"
                app:layout_constraintTop_toBottomOf="@+id/btnJoinLobby" />

            <!-- About Button. -->
            <Button
                android:id="@+id/btnAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/am_btn_layout_margin"
                android:background="@drawable/menu_buttons"
                android:padding="@dimen/am_btn_padding"
                android:text="@string/am_btn_about"
                android:textColor="@color/black"
                android:textSize="@dimen/am_btn_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnScoreboard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>